<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_bar_fragment"
>

    <com.vklochkov.newshere.shared.ClearableEditText
        android:id="@+id/searchText"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/search_bar_text"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/searchBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/search_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/searchText"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="190dp"
        android:progressDrawable="@drawable/circular_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <ListView
        android:id="@+id/article_list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="190dp"
        app:layout_constraintTop_toTopOf="parent"
    />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="310dp"
        android:layout_height="32dp"
        android:layout_marginTop="120dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/sort_by_popularity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_popularity"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/sort_by_relevancy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_relevancy"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/sort_by_published_at_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sort_by_published_at"
            android:textSize="14sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/choose_date_layout"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_date_from"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/sort_date_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/sort_date_hint"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_date_to"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/sort_date_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/sort_date_hint"
            android:textSize="14sp" />
    </LinearLayout>

    <com.scalified.fab.ActionButton
        android:id="@+id/speak_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        fab:type="DEFAULT"
        fab:button_color="#48a999"
        fab:button_colorPressed="#004c40"
        fab:image="@drawable/microphone_icon"
        fab:image_size="24dp"
        fab:shadow_color="#757575"
        fab:shadow_radius="2.0dp"
        fab:shadow_xOffset="0.5dp"
        fab:shadow_yOffset="1.0dp"
        fab:stroke_width="0dp"
        fab:button_colorRipple="@color/colorSecondaryLight"
        fab:rippleEffect_enabled="false"
        fab:shadowResponsiveEffect_enabled="true"
        fab:show_animation="@anim/fab_roll_from_down"
        fab:hide_animation="@anim/fab_roll_to_down"
    />
</android.support.constraint.ConstraintLayout>